<merge xmlns:android="http://schemas.android.com/apk/res/android">
	<TextView
		android:id="@+id/nav_cre_insertimg"
		style="@style/bottom_nav_bar_tab_style"
		android:drawableTop="@drawable/insertimg"
		android:text="@string/insert_img"/>
	<TextView
		android:id="@+id/nav_cre_img2text"
		style="@style/bottom_nav_bar_tab_style"
		android:drawableTop="@drawable/img2text"
		android:text="@string/img_text"/>
	<TextView
		android:id="@+id/nav_cre_voicein"
		style="@style/bottom_nav_bar_tab_style"
		android:drawableTop="@drawable/voice"
		android:text="@string/voice_in"/>
	<TextView
		android:id="@+id/nav_cre_sendto"
		style="@style/bottom_nav_bar_tab_style"
		android:drawableTop="@drawable/send2"
		android:text="@string/send"/>
	<TextView
		android:id="@+id/nav_cre_del"
		style="@style/bottom_nav_bar_tab_style"
		android:visibility="gone"
		android:drawableTop="@drawable/delete"
		android:text="@string/delete"/>
</merge>
