<merge>
	<LinearLayout 
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@+id/title_bar_cre"
		android:layout_width="match_parent"
		android:layout_height="@dimen/dp_tit_barh"
		android:background="@drawable/beautifull_linearlayout_border"
		android:orientation="horizontal">
		<TextView
			android:id="@+id/title_ret_cre"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"
			android:layout_alignParentLeft="true"
			android:gravity="center_vertical"
			android:paddingLeft="10dp"
			android:paddingRight="12dp"
			android:textStyle="bold"
			android:text="@string/sign_ret"
			android:textColor="@color/colorOrange"
			android:textSize="@dimen/dp_tit_nam2" />
		<TextView
			android:id="@+id/title_sign_cre"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"
			android:layout_weight="1"
			android:gravity="left|center_vertical"
			android:textStyle="bold"
			android:text="@string/sign_mod"
			android:textColor="#000000"
			android:textSize="@dimen/dp_tit_nam2" />
		<TextView
			android:id="@+id/title_comp_cre"
			android:layout_width="50dp"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:paddingStart="4dp"
			android:paddingEnd="4dp"
			android:layout_alignParentRight="true"
			android:layout_marginRight="8dp"
			android:gravity="center"
			android:text="@string/complete"
			android:textColor="@color/colorOrange"
			android:textSize="@dimen/dp_tit_opra" />
	</LinearLayout>
</merge>
